2001-03-19  Gary Houston  <ghouston@arglist.com>

	* check-guile.in: rename $parent to $srcdir.  if it's equal to "."
	set it to `pwd`.

2001-03-18  Gary Houston  <ghouston@arglist.com>

	* check-guile.in: use @srcdir@ instead of @test_suite_dir@.  use
	the current directory (build dir) not srcdir to find guile
	executable.  otherwise "make check" doesn't work with a separate
	build directory.  create the test log in
	$build_dir/check-guile.log instead of in srcdir/test-suite
	directory.
	* configure.in: don't define or substitute test_suite_dir.

2001-03-17  Gary Houston  <ghouston@arglist.com>

	* configure.in: don't append threads.doc to EXTRA_DOT_DOC_FILES,
	since EXTRA_DOT_DOC_FILES is redefined later.  define
	EXTRA_DOT_X_FILES and hand it to AC_SUBST.

2001-03-09  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* configure.in: Added header checks for crypt.h, sys/resource.h
	and sys/file.h, function checks for chroot, flock, getlogin,
	cuserid, getpriority, setpriority, getpass, sethostname,
	gethostname, and for crypt() in libcrypt.

2001-03-09  Neil Jerram  <neil@ossau.uklinux.net>

	* configure.in (htmldoc): Merge handling of `--enable-htmldoc'
	option from guile-doc/configure.in.

2001-03-06  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* libguile.h: Removed #include "libguile/dump.h".

2001-02-02  Keisuke Nishida  <kxn30@po.cwru.edu>

	* libguile.h: Added #include "libguile/dump.h".

2001-01-29  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* libguile.h: Added #include "libguile/rdelim.h".

2001-01-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	The following patch was sent by Thien-Thi Nguyen.

	* check-guile.in:  New file.

	* Makefile.am:  Add TESTS rule.

	* configure.in:  Add support for "make check".

2000-11-21  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* acconfig.h:  Removed bogus #ifndef.  Thanks to Lars J. Aas.

2000-10-25  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* GUILE-VERSION (LIBGUILE_MAJOR_VERSION): Incremented major