@@ -1,3 +1,13 @@
+2001-03-19  Gary Houston  <ghouston@arglist.com>
+
+	* tests/r4rs.test: use test-file-name to locate r4rs.test,
+	not data-file-name.
+
+	* guile-test: define tmp-dir, the location where r4rs.test will
+	create it's temporary files.
+	(data-file-name): use tmp-dir.  this must be under build-dir,
+	not src-dir.
+
 2001-03-18  Gary Houston  <ghouston@arglist.com>
 
 	* guile-test: use #!/bogus-path/..., not #!/home/dirk/... in the
